@startuml
'https://plantuml.com/class-diagram

class Game

interface IRenderingContext
Game --> IRenderingContext

package graphics
{
class Graphics

Graphics ..|> IRenderingContext

interface IBindable
IBindable --> IRenderingContext

interface IDrawable
IDrawable ..|> IBindable

class Shader
Shader .up.|> IBindable

class VertexBuffer
VertexBuffer .up.|> IBindable
}

class Entity
Game o--> Entity

class RenderingComponent
Entity --> RenderingComponent

RenderingComponent o--> IBindable
RenderingComponent --> IDrawable

struct RenderingSharedResources
IRenderingContext --> RenderingSharedResources

interface IGameContext
Game ..|> IGameContext
IGameContext --> IRenderingContext
Entity --> IGameContext


@enduml